--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 13%, rgba(33,33,33,1) 33%, rgba
     height: 40%;
     text-align: center;
     color: #4c004e;
+    overflow: hidden;
   }
 .icon{
   /* border: 1px solid black; */
