--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 13%, rgba(33,33,33,1) 33%, rgba
     background-color: #a196a0;
     position: relative;
     z-index: 2;
-    box-shadow: 0 0 20px 3px rgba(68, 0, 59, 0.76);
+    box-shadow: 10px 10px 20px 3px rgba(68, 0, 59, 0.76);
     display: flex;
     flex-direction: column;
     align-items: center;
